--- a/0_harry_potter_splitter.ipynb
+++ b/0_harry_potter_splitter.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "full_text = \"\"\n",
-    "with open('./data/Harry_Potter_all_char_separated.txt', 'r') as f:\n",
+    "with open('./data/harry_potter/Harry_Potter_all_char_separated.txt', 'r') as f:\n",
     "    full_text = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "    chapter_number_str = chapter_number_str[-3:]\n",
     "    filename = f\"{chapter_number_str}_{chapter_title}.txt\".replace(\" \", \"_\")\n",
     "\n",
-    "    with open(f\"./data/harry_potter/{filename}\", 'w') as f:\n",
+    "    with open(f\"./data/harry_potter/chapters/{filename}\", 'w') as f:\n",
     "        f.write(chapter.strip())\n",
     "    chapter_number += 1"
    ]
